# mini_factory

./: README.md
src/bringup/: CMakeLists.txt  README.md  package.xml
src/bringup/launch/: conveyor.launch.py  pi.launch.py  simulation.launch.py
src/control_box/control_box_driver/: setup.py
src/control_box/control_box_driver/control_box_driver/: driver.py  dummy.py  spnode.py
src/control_box/control_box_msgs/msg/: Goal.msg  Measured.msg
src/sp_model/: CMakeLists.txt  Cargo.toml  package.xml
src/sp_model/src/: control_box.rs  conv.rs  lib.rs  mini.rs
